3 - service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: desenvolvimento-frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
