4 - ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: isMobile,Authorization
    nginx.ingress.kubernetes.io/cors-allow-origin: http://frontend.k8s.com.br
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: 8 512k
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: frontend-ingress
  namespace: desenvolvimento-frontend
spec:
  rules:
  - host: frontend.k8s.com.br
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 8080
        path: /
        pathType: Prefix
